Default body padding value to prevent flicker.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -34,6 +34,7 @@ body {
 	font-size: 0.875em;
 	background-color: #fcfcfc;
 	color: #1b1b1b;
+	padding-top: 83px;
 }
 a {
 	text-decoration: none;
